Mon Jan 17 22:00:15 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* infrun.c (_initialize_infrun): Add TARGET_SIGNAL_POLL to list of
	signals for which stop and print are cleared by default.

Mon Jan 17 20:00:51 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* config/pa/tm-hppa.h (unwind_table_entry): Use one of the
	reserved fields to hold a stub unwind entry type.  Fix typo.
	(stub_unwind_entry): New structure for raw stub unwind entries.
	(stub_unwind_types): The types of stubs we may encounter.
	(UNWIND_ENTRY_SIZE, STUB_UNWIND_ENTRY_SIZE): New defines.
	* hppa-tdep.c (rp_saved): Use additional information provided
	by linker stub unwind descriptors.
	(frameless_function_invocation): Likewise.
	(frame_chain_valid): Likewise.
	* paread.c (compare_unwind_entries): New function for sorting
	unwind table entries.
	(read_unwind_info): Rewrite to remove dependency on host endianness.
	Read in data from the $UNWIND_END$ subspace which contains linker
	stub unwind descriptors.  Merge that data into the basic unwind
	table.

	* hppab-nat.c (_initialize_kernel_u_addr): Delete unwanted functions.

Mon Jan 17 22:00:15 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* xcoffread.c (read_xcoff_symtab, case C_FILE): Accept the name
	from either the symbol name or the auxent.
	* coffread.c, symfile.h (coff_getfilename): Renamed from getfilename,
	no longer static.

Mon Jan 17 13:35:01 1994  Fred Fish  (fnf@cygnus.com)

	* Makefile.in (ALLPARAM):  Change irix5.h to nm-irix5.h.

Mon Jan 17 12:35:42 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* README:  Update notes for alpha port.

Mon Jan 17 11:15:57 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* i960-tdep.c (i960_fault_to_signal): Return TARGET_SIGNAL_ILL
	for operation fault, constraint fault, and type fault.

Sun Jan 16 12:46:01 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* Makefile.in (init.c): Add comment explaining formatting conventions.
